# Agentic-Retrieval-Challenge-ICAIF25-Public

./: pyproject.toml  readme.md
data/raw/: kaggle_submission.csv
docs/: icaif25_challenge.md  model_fusion_se.md  writeup_competition_design.md
notebooks/: baseline_template.ipynb  fusion_se_databricks.ipynb
output/: submission.csv
output/experiments/full-gpt-5m_251021_1825/: api_stats.json  evaluation.json  local_recall_analysis.json  submission.csv
src/: get_data_kaggle.py
src/models/: fusion_se.py
